# bittorrent-client

./: .gitignore  CMakeLists.txt  README.md  bittorrent-client.sh  index.js  package-lock.json  package.json  peerID.js  torrentParser.js  tracker.js  vcpkg.json
src/: basic_bencode.c  basic_bencode.h  connection.c  connection.h  disk.c  disk.h  downloading.c  downloading.h  downloading_types.h  file.c  file.h  magnet.c  magnet.h  main.c  messages.c  messages.h  messages_types.h  parsing.c  parsing.h  predownload_udp.c  predownload_udp.h  structs.h  thread_runners.c  thread_runners.h  util.c  util.h  whole_bencode.h
test/: CMakeLists.txt  test_basic_bencode.c  test_basic_bencode.h  test_downloading.c  test_downloading.h  test_file.c  test_file.h  test_messages.c  test_messages.h  test_parsing.c  test_parsing.h  test_predownload_udp.c  test_predownload_udp.h  test_runner.c  test_util.c  test_util.h  tests.cpp
test-files/: Antro [FitGirl Repack].torrent  Dragons Reef [FitGirl Repack].torrent  LIMINAL SHIFT [FitGirl Repack].torrent  Parcel Simulator [FitGirl Repack].torrent  torrentdyne_tolerant_goblin_http_ipv4.probe.torrent  torrentdyne_tolerant_goblin_http_ipv6.probe.torrent
